<resources>
    <string name="app_icon">app icon</string>
    <string name="app_name">Video Downloader</string>
    <string name="browser_search_hint">Search in DuckDuckGo or enter url</string>
    <string name="guide_title">How to download</string>
    <string name="guide_step_one">Visit the website where you want to download the content</string>
    <string name="guide_step_two">Click the download button provided on the webpage and wait for the download process to complete</string>
    <string name="guide_back">Back</string>
    <string name="guide_demo_search">Search Anything</string>
    <string name="guide_demo_bookmark">Bookmark</string>
    <string name="guide_demo_history">History</string>
    <string name="guide_demo_downloader">Downloader</string>
    <string name="launch_splash_app_name">Downloader</string>
    <string name="launch_splash_loading">loading</string>
    <string name="launch_onboarding_title_one">Download Anytime</string>
    <string name="launch_onboarding_title_two">Easy Download</string>
    <string name="launch_onboarding_title_three">Bookmark Manager</string>
    <string name="launch_next">Next</string>
    <string name="launch_start">Start</string>
    <string name="launch_popular_websites">Popular websites</string>
    <string name="launch_processing_title">Processing</string>
    <string name="launch_bookmark_title">Bookmark</string>
    <string name="launch_paste_link_here">Paste the link here</string>
    <string name="launch_paste">Paste</string>
    <string name="launch_processing_mock_file">tiktok_com.mp4</string>
    <string name="launch_launcher_prompt_title">Set Downloader as your default home screen</string>
    <string name="launch_launcher_step_one">1.Tap the Continue button below</string>
    <string name="launch_launcher_step_two">2.Tap Downloader set as default</string>
    <string name="launch_launcher_prompt_hint">Tap Anywhere To</string>
    <string name="launch_continue">Continue</string>
    <string name="launch_launcher_phone_title">Default Home App</string>
    <string name="launch_launcher_system_home">System/Original Launcher</string>
    <string name="home_title_downloader">Downloader</string>
    <string name="popular_websites">Popular Websites</string>
    <string name="home_tab_browser">Browser</string>
    <string name="home_tab_processing">Processing</string>
    <string name="home_tab_downloaded">Downloaded</string>
    <string name="home_tab_settings">Settings</string>
    <string name="title_video">Downloaded</string>
    <string name="title_progress">Processing</string>
    <string name="title_settings">Settings</string>
    <string name="dialog_video_title">Video found:</string>
    <string name="dialog_preview_video">Preview Video</string>
    <string name="dialog_download_video">Download Video</string>
    <string name="dialog_download_cancel">Cancel</string>
    <string name="video_empty_message">You have not downloaded any video yet.</string>
    <string name="video_filter_all">All</string>
    <string name="video_filter_videos">Videos</string>
    <string name="video_filter_images">Images</string>
    <string name="video_action_share">Share</string>
    <string name="video_action_delete">Delete</string>
    <string name="video_action_cancel">Cancel</string>
    <string name="video_rename_save">Save</string>
    <string name="video_menu_move_private">Move to private folder</string>
    <string name="video_sort_title">Sort</string>
    <string name="video_sort_confirm">Confirm</string>
    <string name="video_selected_count">%1$d selected</string>
    <string name="video_menu_rename">Rename</string>
    <string name="video_menu_delete">Delete</string>
    <string name="video_menu_delete_device">Delete From Device</string>
    <string name="video_menu_share">Share</string>
    <string name="video_menu_move_private_title">Move To Private Folder</string>
    <string name="video_rename_title">Rename video</string>
    <string name="video_rename_invalid">Invalid name. Please try again!</string>
    <string name="video_rename_exist">Video name already exists!</string>
    <string name="video_share_message">You don\'t have any video player app installed on your device</string>
    <string name="video_menu_open_with">Open with</string>
    <string name="progress_empty_message">You are not downloading any video.</string>
    <string name="settings_general" translatable="false">GENERAL</string>
    <string name="settings_videos_folder">Videos folder</string>
    <string name="settings_folder_path" translatable="false">folder path</string>
    <string name="settings_clear_browser_cookies">Clear browser cookies</string>
    <string name="settings_set_as_launcher">Set as Launcher</string>
    <string name="settings_set_as_launcher_summary">Open the system home picker and switch the desktop to Neo Launcher.</string>
    <string name="settings_message_open_folder">You don\'t have any file explorer app installed on your device</string>
    <string name="progress_menu_cancel">Cancel</string>
    <string name="app_download_channel_id" translatable="false">download_channel_id</string>
    <string name="all_text_cancel">Cancel</string>
    <string name="progress_menu_pause">pause</string>
    <string name="progress_menu_resume">resume</string>
    <string name="download_link_label">Video Url</string>
    <string name="processing_subtitle">Paste a copied video or M3U8 link and jump straight into download selection.</string>
    <string name="processing_paste_label">Paste copied URL</string>
    <string name="processing_paste_hint">Paste The Link Here</string>
    <string name="processing_parse_action">Parse copied url</string>
    <string name="processing_parsing">Parsing copied link…</string>
    <string name="processing_parse_failed">解析失败</string>
    <string name="copyright_restricted_download_message">Due to copyright restrictions, downloads from YouTube are not available.</string>
    <string name="view" translatable="false">View</string>
    <string name="paste">paste</string>
    <string name="history">History</string>
    <string name="share_link">Share Link</string>
    <string name="desktop_mode">Desktop Mode</string>
    <string name="searchbar_hint">Search</string>
    <string name="settings">Settings</string>
    <string name="about_an_hour_ago">about an hour ago</string>
    <string name="remove">remove</string>
    <string name="insert_your_regular_video">Paste your regular video url or M3U8 link here</string>
    <string name="title_media_link">Download by url</string>
    <string name="clear_history">Clear History</string>
    <string name="proxy">Proxy</string>
    <string name="proxies">Proxies</string>
    <string name="proxies_unavailable">Proxies unavailable</string>
    <string name="loading_image_view">loading image view</string>
    <string name="video_menu_open_in_folder">Open in folder</string>
    <string name="help">Help</string>
    <string name="ok">OK</string>
    <string name="get_started_guide">Hi ;鈥?  For video detecting go to video in browser, click play and waite until detected(can take 5鈥?0 seconds) \n 1. You can change ads detecting threshold in settings \n 2. Some video downloaded corrupted in multi thread mode, use One thread for downloading in such situations \n\n For Video Downloading: \n \n 1. Press button,in dialog select resolution, if available, and press colored button \n \n 2, 3. Press Play on video player on page with video, after that video should be detected. \n \n If not try to press reload videos on video page or try reload page and repeat. \n If not email me.\n \n \n After downloading video available in app. \n</string>
    <string name="instruction">Hi ;鈥? \n For video detecting go to video in browser, click play and waite until video detected(can take 5鈥?0 seconds) \n 1. You can change ads detecting threshold in settings \n 2. Video Detection not working for some web sites in mobile mode, try use desktop version of web site if video not detecting in mobile mode \n If not try to press reload videos on video page or try reload page and repeat. \n If not email me.\n \n\n For Video Downloading: \n \n 1. Press Download button,in appeared screen select resolution, if available \n \n 2. Press press download button. \n  \n \n After downloading video available in app. \n</string>
    <string name="new_tab">New Tab</string>
    <string name="cookies_cleared">Cookies cleared</string>
    <string name="download_started">   Download Started Successfully!!!   </string>
    <string name="more_tabs_in_next_updates">More tabs will be allowed in next updates</string>
    <string name="download_open_in_app">Open in App</string>
    <string name="download_watch_in_app">Watch Video</string>
    <string name="ad_blocker">Ad Blocker</string>
    <string name="desktop_mode_on">Desktop Mode On</string>
    <string name="desktop_mode_off">Desktop Mode Off</string>
    <string name="player_resolution">video resolution as in the player</string>
    <string name="video_found">Video Found</string>
    <string name="show_video_found_alert">Show Video Download Dialog</string>
    <string name="dontshow">Don\'t show again</string>
    <string name="whatshould">What should we do?</string>
    <string name="dialog_preview_video_force">Preview Video Force</string>
    <string name="show_action_button">Show video download button</string>
    <string name="browser_s_icon">browser\'s icon</string>
    <string name="stop_and_save">Stop and Save</string>
    <string name="open_download_dialog_or_restart">Open download dialog or restart video check</string>
    <string name="video_title_edit">Video title edit</string>
    <string name="menu">menu</string>
    <string name="home">home</string>
    <string name="powerSave">Power save mode detected!\nVideo detection not working, turn off power save mode!</string>
    <string name="warning">Warning! Power save Mode.</string>
    <string name="download_text">download</string>
    <string name="check_every_request_on_video_mp4">Check every request on MP4 video</string>
    <string name="check_every_request_on_video_m3u8">Check every request on M3U8 or MPD video</string>
    <string name="find_videos_by_url">Check web-sites urls</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="found_videos_from">Found videos from %1$s</string>
    <string name="title">Title</string>
    <string name="ads_detection_treshold">Ads Detection Treshold: </string>
    <string name="thread_count_for_regular_files">Thread Count for regular files: </string>
    <string name="thread_count_for_hls_and_mpd">Thread Count for HLS and MPD: </string>
    <string name="lock_screen_orientation_portrait">Lock portrait screen orientation</string>
    <string name="regular_threads_count">Regular Threads Count:</string>
    <string name="m3u8_threads_count">M3U8 Threads Count:</string>
    <string name="downloads_location">Downloads Location</string>
    <string name="downloads_folder">Downloads folder</string>
    <string name="hidden_folder">Hidden folder</string>
    <string name="sd_app_folder">SD app folder</string>
    <string name="host_hint">Host</string>
    <string name="port_hint">Port</string>
    <string name="login_hint">User</string>
    <string name="password_hint">Password</string>
    <string name="save_proxy">Save</string>
    <string name="http_proxy">HTTP Proxy</string>
    <string name="check_if_in_list">Only check web-sites urls if in supported list</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarks_list">Bookmarks</string>
    <string name="bookmark_screen_title">Bookmark</string>
    <string name="history_screen_title">History</string>
    <string name="private_space_action_change_password">Change Password</string>
    <string name="private_space_action_change_security">Change Security Questions</string>
    <string name="private_space_action_delete_batch">Delete From Device</string>
</resources>